--- a/src/assets/css/sass/core/typo-responsive.scss
+++ b/src/assets/css/sass/core/typo-responsive.scss
@@ -1,55 +1,4 @@
-/*This file mixins for helping centering, disposing and placing elements*/
-@mixin  responsiveTypo {
-  @media screen and (max-width: 1000px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 950px) {
-    font-size:18px;
-  }
-  @media screen and (max-width: 900px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 850px) {
-    font-size:18px;
-  }
-  @media screen and (max-width: 800px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 750px) {
-    font-size:18px;
-  }
-  @media screen and (max-width: 700px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 650px) {
-    font-size:18px;
-  }
-  @media screen and (max-width: 600px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 550px) {
-    font-size:18px;
-  }
-  @media screen and (max-width: 500px) {
-    font-size:20px;
-  }
-
-  @media screen and (max-width: 450px) {
-    font-size:20px;
-  }
-
-  @media screen and (max-width: 480px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 350px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 300px) {
-    font-size:20px;
-  }
-  @media screen and (max-width: 250px) {
-    font-size:20px;
-  }
-
-
+//
+.main-font {
+    
 }
