--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -1,142 +1,93 @@
-@import "../core/layout-rules.scss";
 
-header {
-    position: fixed;
+#menu-container {
+    position: relative;
+    z-index: 50;
     top: 0px;
-    height:75px;
-    z-index: 200;
-    width: 100%;
-    background-color: $mainWhite;
-    transition: all 2s;
-    &.activate-shadow {
-        box-shadow: 3px 3px 3px rgba(125, 125, 125, 0.5);
-    }
-    @media screen and (max-width: 1060px) {
-        height: 75px;
-    }
-
-    .logo-container {
-
-        @media screen and (max-width: 900px) {
-            display: block;
-        }
-        display: inline-block;
+    right:  0px;
+    .menu-hamburger {
+        cursor: pointer;
+        right: 25px;
         position: absolute;
-        padding-left: 25px;
-        padding-top: 13px;
-        /* Video starts at 10*/
-        z-index: 11;
-        img {
-            height: 50px;
-            @media screen and (max-width: 1175px) {
 
-                height: 50px;
-            }
-            @media screen and (max-width: 1060px) {
-                padding-top: 0px;
-                height: 50px;
-            }
+        .slice1,
+        .slice2,
+        .slice3 {
+            padding-bottom: 8px;
+            width: 35px;
+            border-bottom: solid 3px black;
         }
     }
+    #menu {
+        overflow: hidden;
+        position: absolute;
+        width: 0px;
+        right: 0px;
+        top: 0px;
+        // Add class for k illing display
+        &.kill-menu-display {
+            transition: all 0.5s;
 
-    #menu-container {
-        text-align: right;
-        padding-right: 30px;
-        padding-top: 10px;
-        z-index: 1000;
-
-        @media screen and (max-width: 1175px) {
-            text-align: right;
         }
-        #menu-div {
-            margin-top:3px;
+        &.active-menu-display {
+            transition: all 0.5s;
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            background-color:  $mainYellow;
+            height:100vh;
+            width: 350px;
+            z-index: 55;
+            border-left: solid black 3px;
         }
-        nav {
-            color: $mainBlue;
-            text-transform: uppercase;
+        .close-button {
+            cursor: pointer;
+            position: absolute;
+            right:  15px;
+            font-size:35px;
+        }
+        nav{
 
-            .container-connection {
+            padding-top: 80px;
+            .translation-box {
+                font-size:35px;
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                display: inline-block;
+                color: black;
 
-                .underline {
-                    border-bottom: solid $mainBlue 1px;
-                }
-                p {
-                    font-size: 13px;
-                    padding-right: 5px;
+                // Kill hover and active underline
+                &:hover,
+                &:active {
+                    text-decoration: none;
+
                 }
             }
             ul {
                 list-style: none;
-                a {
-                    font-size: 12px;
-                    // Macbook 13 inches
-                    @media screen and (max-width: 8000px) {
-                        width: 10px;
-                        font-size: 12px;
-                    }
-                }
                 li {
-                    display: inline-block;
-                    transition: all 0.5s;
-                    padding: 13px;
-                    cursor: pointer;
+                    width: 200px;
+                    font-size:38px;
+                    text-align: center;
+                    a {
+                        color: black;
 
-                    &.active-menu-user {
-                        display: none;
-                    }
-                    &:hover {
-                        background-color: $mainWhite;
-                    }
-                    &.menu-membership {
-                        background-color: $mainGreen;
-                        color: $mainWhite;
-                    }
+                        // Kill hover and active underline
+                        &:hover,
+                        &:active {
+                            text-decoration: none;
 
-                }
+                        }
+                        .line-overlay {
+                            transition:width 0.85s;
+                            width: 0px;
 
-                .connection {
-                    display: inline-block;
-
-                    .underline {
-                    }
-                    h3, p {
-                        margin: 0px;
-                    }
-                    h3 {
-                        padding-top: 15px;
-                    }
-                    @media screen and (max-width: 8000px) {
-                        margin-left: 0px;
-                        display: inline;
-                    }
-                    @media screen and (max-width: 990px) {
-                        margin-left: 0px;
-                    }
-                }
-                .menu-membership {
-                    font-size:12px;
-                    margin-top: -1px;
-                    padding:13.5px;
-                }
-            }
-        }
-        // Mobile menu
-        @media screen and (max-width: 1060px) {
-            padding-right: 0px;
-            position: absolute;
-            right:-500%;
-            width: 100vw;
-            height: 100vh;
-            background-color: $mainWhite;
-            nav {
-                width:100%;
-                @include center-content;
-                ul {
-                    width:100%;
-                    padding:0px;
-                    li {
-                        display: block;
-                        text-align: center;
+                            &.active {
+                                width: 150px;
+                                border: solid black 1px;
+                                margin:0 auto;
+                            }
+                        }
                     }
                 }
             }
