--- a/src/assets/css/sass/general/components/homepage-component.scss
+++ b/src/assets/css/sass/general/components/homepage-component.scss
@@ -1,8 +1,10 @@
 @import "../colors.scss";
 
-.black-line {
-    height:8px;
-    width:150px;
-    background-color: $mainBlack;
-    display:inline-block;
+.home-page-content  {
+    .black-line {
+        height:6px;
+        width:150px;
+        background-color: $mainBlack;
+
+    }
 }
