--- a/src/assets/css/sass/general/font.scss
+++ b/src/assets/css/sass/general/font.scss
@@ -1,3 +1,46 @@
 %main-font {
      font-family: "Arial";
+     font-weight: 900;
+}
+
+%thumbnail-title {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+
+%thumbnail-brief {
+    text-align: left;
+    font-size: 14px;
+}
+
+// Classes
+.large-block-font {
+    text-align: left;
+    font-size: 28px;
+    margin-top: 10px;
+    margin-bottom:0px;
+}
+
+
+.font-medium-title {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 21px;
+    margin-top: 10px;
+ }
+
+// Classes
+.title-font {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.font-description {
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom:0px;
 }
