--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -1,8 +1,39 @@
 
 header {
+
+
     .logo-container {
         text-align:left;
     }
+
+    #searchbar {
+        #search-item {
+            cursor:pointer;
+            font-size:16px;
+            transition:0.5s all;
+            margin-right:5px;
+            &:hover {
+                font-size:20px;
+            }
+        }
+        #search-bar-term {
+            width:0px;
+            height: 0px;
+            background-color: $mainYellow;
+            border:0px;
+            transition:all 0.5s;
+
+            &:focus {
+                outline: 0;
+            }
+            &.active-search {
+                border-bottom:solid 3px black;
+                width:50%;
+                height: 15px;
+            }
+        }
+    }
+
     #menu-container {
         position: relative;
         z-index: 50;
