Adding email system

--- a/src/assets/css/sass/booter.scss
+++ b/src/assets/css/sass/booter.scss
@@ -9,8 +9,9 @@
 @import "general/general-styling.scss";
 @import "general/components/homepage-component.scss";
 @import "general/grid.scss";
-
+@import "general/buttons.scss";
 
 // Including site parts
 @import "site-parts/header.scss";
 @import "site-parts/home-page.scss";
+@import "site-parts/contact.scss";
