Adding single page

--- a/src/assets/css/sass/general/font.scss
+++ b/src/assets/css/sass/general/font.scss
@@ -44,3 +44,10 @@
     margin-top: 10px;
     margin-bottom:0px;
 }
+
+
+.font-small {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom:0px;
+}
