--- a/src/assets/css/sass/booter.scss
+++ b/src/assets/css/sass/booter.scss
@@ -15,3 +15,4 @@
 @import "site-parts/header.scss";
 @import "site-parts/home-page.scss";
 @import "site-parts/contact.scss";
+@import "site-parts/single-post.scss    ";
