--- a/src/assets/css/sass/site-parts/contact.scss
+++ b/src/assets/css/sass/site-parts/contact.scss
@@ -7,7 +7,8 @@
             .form-value-container {
                 margin-bottom:15px;
                 .cameleon-label-form {
-    
+                    display: inline-block;
+                    width:150px;
                 }
                 .single-input {
                     width:0px;
@@ -21,7 +22,7 @@
                     }
                     &.active-input {
                         border-bottom:solid 3px black;
-                        width:120px;
+                        width:250px;
                         height: 15px;
                     }
                 }
