--- a/src/assets/css/sass/booter.scss
+++ b/src/assets/css/sass/booter.scss
@@ -15,4 +15,5 @@
 @import "site-parts/header.scss";
 @import "site-parts/home-page.scss";
 @import "site-parts/contact.scss";
-@import "site-parts/single-post.scss    ";
+@import "site-parts/single-post.scss";
+@import "site-parts/search-result.scss";
