--- a/src/assets/css/sass/core/layout-rules.scss
+++ b/src/assets/css/sass/core/layout-rules.scss
@@ -32,3 +32,11 @@
     align-items: center;
 
 }
+
+.center-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
