--- a/src/assets/css/sass/general/main-style.scss
+++ b/src/assets/css/sass/general/main-style.scss
@@ -1,8 +1,11 @@
 body {
-
+    a:link, a:visited, a:hover, a:active  {
+        color:$mainBlack;
+        text-decoration:none;
+    }
     text-align:center;
     background-color: yellow;
     .bloc-left {
-        text-
+        
     }
 }
