--- a/src/assets/css/sass/site-parts/contact.scss
+++ b/src/assets/css/sass/site-parts/contact.scss
@@ -1,5 +1,6 @@
 #contact-homepage-container {
-
+    position: relative;
+    background-color:$transparentYellow;
     .form-container {
         #unique-form {
             text-align: center;
