--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -12,9 +12,20 @@ body {
             margin-bottom:25px;
             position: relative;
             
+                
+            a:link, a:visited, a:hover, a:active  {
+                color:$mainBlack;
+                text-decoration:none;
+            }
+
             .grid-thumbnail {
                 height:180px;
                 width:330px;
+
+                &.square {
+                    height:330px;
+                    width:330px;
+                }
             }
 
             .black-box {
@@ -24,6 +35,10 @@ body {
                 width:330px;
                 background-color: rgba(0,0,0,0.5);
                 transition:all 0.55s;
+                &.square {
+                    height:330px;
+                    width:330px;
+                }
                 &.hover-grid {
                     height: 0px;
                     width:0px;
