--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -1,18 +1,34 @@
 
 header {
-
-
+    .header-container {
+        position: relative;
+    }
+    padding-left:15px;
+    padding-right:15px;
+    position: fixed;
+    top:0px;
+    width:100%;
+    height:50px;
+    background-color:rgba(255,255,0, 0.85);
+    z-index:999;
+    box-shadow: 0 4px 2px -2px rgba(0,0,0,0.55);
     .logo-container {
         text-align:left;
     }
 
     #searchbar {
+        display: inline-block;
+        width:50%;
+        position: absolute;
         #search-item {
             cursor:pointer;
             font-size:16px;
             transition:0.5s all;
             margin-right:5px;
             &:hover {
+                font-size:20px;
+            }
+            &.active-search-logo {
                 font-size:20px;
             }
         }
@@ -35,92 +51,23 @@ header {
     }
 
     #menu-container {
-        position: relative;
-        z-index: 50;
-        top: 0px;
-        right:  0px;
 
-        .menu-hamburger {
-
-            cursor: pointer;
-            right: 25px;
-            position: absolute;
-
-            .line-1,
-            .line-2,
-            .line-3 {
-                display:block;
-                padding-bottom: 8px;
-                width: 35px;
-                border-bottom: solid 3px black;
-            }
-        }
         #menu {
-            overflow: hidden;
-            position: absolute;
-            width: 0px;
-            right: 0px;
-            top: 0px;
-            // Add class for k illing display
-            &.kill-menu-display {
-                transition: all 0.5s;
-
-            }
-            &.active-menu-display {
-                transition: all 0.5s;
-                position: absolute;
-                right: 0px;
-                top: 0px;
-                background-color:  $mainYellow;
-                height:100vh;
-                width: 350px;
-                z-index: 55;
-                border-left: solid black 3px;
-            }
-            .close-button {
-                cursor: pointer;
-                position: absolute;
-                right:  15px;
-                font-size:35px;
-            }
-            nav{
-
-                .close-button {
-                    top:10px;
-                }
-                padding-top: 80px;
-                .translation-box {
-                    font-size:35px;
-                    position: absolute;
-                    top: 10px;
-                    left: 10px;
-                    display: inline-block;
-                    color: black;
-
-                    // Kill hover and active underline
-                    &:hover,
-                    &:active {
-                        text-decoration: none;
-
-                    }
-                }
+            nav {
+                text-align: right;
                 ul {
-                    text-align: left;
-                    list-style: none;
-                    li {
-                        width: 200px;
-                        font-size:38px;
-                        text-align: left;
-                        a {
-                            color: black;
-                            text-decoration: none;
-                            animation:0.5s all;
-
-
+                    .close-button {display:none;}
+                    li.menu-item {
+                        margin-right:20px;
+                        display: inline-block;
+                        a { 
+                            transition:all 0.5s;
+                        
                             // Kill hover and active underline
                             &:hover,
                             &:active {
-                                text-decoration:    none;
+                                text-decoration:  none;
+                                font-size:17px;
 
                             }
                             .line-overlay {
@@ -138,5 +85,112 @@ header {
                 }
             }
         }
+
+        // Mobile
+        @media screen and (max-width: 880px) {
+            position: relative;
+            z-index: 50;
+            top: 0px;
+            right:  0px;
+            .menu-hamburger {
+
+                cursor: pointer;
+                right: 25px;
+                position: absolute;
+    
+                .line-1,
+                .line-2,
+                .line-3 {
+                    display:block;
+                    padding-bottom: 8px;
+                    width: 35px;
+                    border-bottom: solid 3px black;
+                }
+            }
+            #menu {
+                overflow: hidden;
+                position: absolute;
+                width: 0px;
+                right: 0px;
+                top: 0px;
+                // Add class for k illing display
+                &.kill-menu-display {
+                    transition: all 0.5s;
+    
+                }
+                &.active-menu-display {
+                    transition: all 0.5s;
+                    position: absolute;
+                    right: 0px;
+                    top: 0px;
+                    background-color:  $mainYellow;
+                    height:100vh;
+                    width: 350px;
+                    z-index: 55;
+                    border-left: solid black 3px;
+                }
+                .close-button {
+                    cursor: pointer;
+                    position: absolute;
+                    right:  15px;
+                    font-size:35px;
+                }
+                nav{
+    
+                    .close-button {
+                        top:10px;
+                    }
+                    padding-top: 80px;
+                    .translation-box {
+                        font-size:35px;
+                        position: absolute;
+                        top: 10px;
+                        left: 10px;
+                        display: inline-block;
+                        color: black;
+    
+                        // Kill hover and active underline
+                        &:hover,
+                        &:active {
+                            text-decoration: none;
+    
+                        }
+                    }
+                    ul {
+                        text-align: left;
+                        list-style: none;
+                        li {
+                            width: 200px;
+                            font-size:38px;
+                            text-align: left;
+                            a {
+                                color: black;
+                                text-decoration: none;
+                                animation:0.5s all;
+    
+    
+                                // Kill hover and active underline
+                                &:hover,
+                                &:active {
+                                    text-decoration:    none;
+    
+                                }
+                                .line-overlay {
+                                    transition:width 0.85s;
+                                    width: 0px;
+    
+                                    &.active {
+                                        width: 150px;
+                                        border: solid black 1px;
+                                        margin:0 auto;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
     }
 }
