Adding git ignore

--- a/src/assets/css/sass/booter.scss
+++ b/src/assets/css/sass/booter.scss
@@ -22,7 +22,8 @@
 @import "site-parts/contact.scss";
 @import "site-parts/single-post.scss";
 @import "site-parts/search-result.scss";
-
+@import "site-parts/footer.scss";
+@import "site-parts/single-team-member.scss";
 
 // All component related
 @import "site-parts/animation-component/landing-page.scss";
