--- a/src/assets/css/sass/site-parts/animation-component/landing-page.scss
+++ b/src/assets/css/sass/site-parts/animation-component/landing-page.scss
@@ -1,10 +1,11 @@
 @import "../../core/layout-rules.scss";
 #landing-page-animation {
-    background-color: yellow;
+    background-image:url(http://api.thumbr.it/whitenoise-361x370.png?background=ffff00ff&noise=626262&density=62&opacity=62);
     width: 100vw;
-    height:100vh; 
-    z-index:1500;
+    height:105vh; 
+    z-index:9999999;
     position: absolute;
+    animation: infinite 0.5s noise;
     &.toFadeOut {
         animation:fadeOutLanding 0.5s forwards;    
     }
@@ -55,4 +56,22 @@
     to{
         display:none;
     }
+}
+
+@keyframes noise {
+    25% {
+        background-image:url(http://api.thumbr.it/whitenoise-361x370.png?background=ffff00ff&noise=626262&density=62&opacity=62);
+
+    }
+    50% {
+        background-image:url( http://api.thumbr.it/whitenoise-361x370.png?background=ffff00ff&noise=626262&density=97&opacity=62);
+
+    }    
+    75% {
+        background-image:url(http://api.thumbr.it/whitenoise-361x370.png?background=ffff00ff&noise=828282&density=81&opacity=100);
+    }
+    100% {
+        background-image:url(http://api.thumbr.it/whitenoise-361x370.png?background=ffff00ff&noise=171717&density=12&opacity=65);
+    }
+
 }
