--- a/src/assets/css/sass/site-parts/contact.scss
+++ b/src/assets/css/sass/site-parts/contact.scss
@@ -2,6 +2,7 @@
     position: relative;
     background-color:$transparentYellow;
     .form-container {
+        margin-bottom:180px;
         #unique-form {
             text-align: center;
             width: 80%;
