--- a/src/assets/css/sass/site-parts/home-page.scss
+++ b/src/assets/css/sass/site-parts/home-page.scss
@@ -13,8 +13,6 @@
     
 }
 #site-container {
-    
-        
     // By pass element to bind grip click hover particle
     .grid-item {
         background-color: $transparentYellow;
@@ -25,6 +23,7 @@
 // Bypass default video css 
 body {
     #site-container {
+        
         video {
             &.main-page-video {
                 width:80%;
@@ -55,6 +54,7 @@ body {
     position: relative;
     background-color: $transparentYellow;
     max-width:80%;
+    margin-bottom:25px;
     .equation {
         margin-top:15px;
         text-align: center;
@@ -79,4 +79,9 @@ body {
 
         }
     }
+}
+
+
+#projects-homepage-container {
+    
 }
