--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -7,19 +7,24 @@ header {
     padding-right:15px;
     position: fixed;
     top:0px;
+    left:0px;
     width:100%;
     height:50px;
-    background-color:rgba(255,255,0, 0.85);
-    z-index:999;
-    box-shadow: 0 4px 2px -2px rgba(0,0,0,0.55);
+    background-color:$mainYellow;
+    z-index:9999;
+   // box-shadow: 0 4px 2px -2px rgba(0,0,0,0.55);
+    
     .logo-container {
         text-align:left;
     }
 
     #searchbar {
         display: inline-block;
-        width:50%;
-        position: absolute;
+        text-align: left;
+        transition: all 0.2s;
+        &.active-searchbar  {
+            width:25%;
+        }
         #search-item {
             cursor:pointer;
             font-size:16px;
@@ -43,9 +48,10 @@ header {
                 outline: 0;
             }
             &.active-search {
-                border-bottom:solid 3px black;
-                width:50%;
-                height: 15px;
+    
+                height: 20px;
+                border-bottom: solid 3px rgba(0,0,0,0.5);
+                width: 90%;
             }
         }
     }
@@ -55,6 +61,7 @@ header {
         #menu {
             nav {
                 text-align: right;
+                padding-right:70px;
                 ul {
                     .close-button {display:none;}
                     li.menu-item {
@@ -192,5 +199,19 @@ header {
             }
         }
 
+    }
+}
+
+
+// Single page header 
+#single-page-header {
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    background-color: $transparentYellow;
+    padding-top:15px;
+    .fa-home {
+        cursor :pointer;
+        font-size:32px;
     }
 }
