Fixing some styling isssues

--- a/src/assets/css/sass/booter.scss
+++ b/src/assets/css/sass/booter.scss
@@ -24,6 +24,7 @@
 @import "site-parts/search-result.scss";
 @import "site-parts/footer.scss";
 @import "site-parts/single-team-member.scss";
+@import "site-parts/single-project.scss";
 
 // All component related
 @import "site-parts/animation-component/landing-page.scss";
