--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -65,3 +65,15 @@ body {
 
     }
 }
+
+body {
+    .grid2 {
+        display: flex;
+        justify-content: space-between;
+        
+        .left-box, 
+        .right-box {
+            width: 48%;
+        }
+    }  
+}
