--- a/src/assets/css/sass/general/general-styling.scss
+++ b/src/assets/css/sass/general/general-styling.scss
@@ -32,6 +32,10 @@ body {
     margin-left:30px;
     padding-top:100px;
     position: relative;
+    @media only screen and (max-width: 500px) {
+         
+        padding-top: 15px;  
+    }
     .know-more {
         cursor:pointer;
         margin-top: 50px;
@@ -49,7 +53,6 @@ body {
 header  {
 
     .logo-container {
-        display:none;
         img {
             
             height:auto;
