--- a/src/assets/css/sass/site-parts/general.scss
+++ b/src/assets/css/sass/site-parts/general.scss
@@ -6,7 +6,10 @@ body {
     margin:0;
     font-family: helvetica;
     #site-container {
-        
+        @media only screen and (min-width: 500px) {
+         
+            padding-top: 15px;  
+        }
         padding-top: 100px; 
         margin:0 auto;
         position: relative;
