--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -13,8 +13,14 @@ header {
     background-color:$mainYellow;
     z-index:9999;
    // box-shadow: 0 4px 2px -2px rgba(0,0,0,0.55);
-    
+    // Logo
+    svg  {
+        width: 100px;
+        height: auto;
+        position: absolute;
+    }
     .logo-container {
+
         text-align:left;
     }
 
@@ -57,7 +63,8 @@ header {
     }
 
     #menu-container {
-
+        right: 5px;
+        position: absolute;
         #menu {
             nav {
                 text-align: right;
