--- a/src/assets/css/sass/site-parts/home-page.scss
+++ b/src/assets/css/sass/site-parts/home-page.scss
@@ -8,22 +8,22 @@
 
 }
 
-// Tweaking around z index for canvas and site container click 
+// Tweaking around z index for canvas and site container click
 #particles-js {
-    
+
 }
 #site-container {
     // By pass element to bind grip click hover particle
     .grid-item {
         background-color: $transparentYellow;
-        
+
     }
 }
 
-// Bypass default video css 
+// Bypass default video css
 body {
     #site-container {
-        
+
         video {
             &.main-page-video {
                 width:80%;
@@ -34,7 +34,7 @@ body {
 }
 
 #model-homepage-container {
-    
+
     max-width:80%;
     background-color: $transparentYellow;
     position: relative;
@@ -46,12 +46,12 @@ body {
             font-size:24px;
             transform: rotate(135deg);
         }
-        
+
     }
 }
 
 #home-page-services-container {
-    
+
     position: relative;
     background-color:$transparentYellow;
 
@@ -89,8 +89,9 @@ body {
 }
 
 #mission-homepage-container {
+    padding-bottom:20px;
     max-width:80%;
 }
 #projects-homepage-container {
-    
+
 }
