--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -54,7 +54,7 @@ header {
                 outline: 0;
             }
             &.active-search {
-    
+
                 height: 20px;
                 border-bottom: solid 3px rgba(0,0,0,0.5);
                 width: 90%;
@@ -65,18 +65,21 @@ header {
     #menu-container {
         right: 5px;
         position: absolute;
+        
         #menu {
             nav {
                 text-align: right;
                 padding-right:70px;
+
                 ul {
                     .close-button {display:none;}
                     li.menu-item {
                         margin-right:20px;
                         display: inline-block;
-                        a { 
+                        text-transform:uppercase;
+                        a {
                             transition:all 0.5s;
-                        
+
                             // Kill hover and active underline
                             &:hover,
                             &:active {
@@ -111,7 +114,7 @@ header {
                 cursor: pointer;
                 right: 25px;
                 position: absolute;
-    
+
                 .line-1,
                 .line-2,
                 .line-3 {
@@ -130,7 +133,7 @@ header {
                 // Add class for k illing display
                 &.kill-menu-display {
                     transition: all 0.5s;
-    
+
                 }
                 &.active-menu-display {
                     transition: all 0.5s;
@@ -150,7 +153,7 @@ header {
                     font-size:35px;
                 }
                 nav{
-    
+
                     .close-button {
                         top:10px;
                     }
@@ -162,12 +165,12 @@ header {
                         left: 10px;
                         display: inline-block;
                         color: black;
-    
+
                         // Kill hover and active underline
                         &:hover,
                         &:active {
                             text-decoration: none;
-    
+
                         }
                     }
                     ul {
@@ -181,18 +184,18 @@ header {
                                 color: black;
                                 text-decoration: none;
                                 animation:0.5s all;
-    
-    
+
+
                                 // Kill hover and active underline
                                 &:hover,
                                 &:active {
                                     text-decoration:    none;
-    
+
                                 }
                                 .line-overlay {
                                     transition:width 0.85s;
                                     width: 0px;
-    
+
                                     &.active {
                                         width: 150px;
                                         border: solid black 1px;
@@ -210,7 +213,7 @@ header {
 }
 
 
-// Single page header 
+// Single page header
 #single-page-header {
     position:absolute;
     top: 0px;
