--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -28,9 +28,6 @@ header {
         display: inline-block;
         text-align: left;
         transition: all 0.2s;
-        &.active-searchbar  {
-            width:25%;
-        }
         #search-item {
             cursor:pointer;
             font-size:16px;
@@ -40,7 +37,7 @@ header {
                 font-size:20px;
             }
             &.active-search-logo {
-                font-size:20px;
+
             }
         }
         #search-bar-term {
@@ -49,15 +46,16 @@ header {
             background-color: $mainYellow;
             border:0px;
             transition:all 0.5s;
-
+            margin-top:0px;
             &:focus {
                 outline: 0;
             }
             &.active-search {
-
-                height: 20px;
-                border-bottom: solid 3px rgba(0,0,0,0.5);
-                width: 90%;
+                width: 200px;
+                height: 18px;
+                background-color: #ffff07;
+                border-bottom: solid 1px black;
+                transition: all 0.5s;
             }
         }
     }
@@ -65,7 +63,7 @@ header {
     #menu-container {
         right: 5px;
         position: absolute;
-        
+
         #menu {
             nav {
                 text-align: right;
