--- a/src/assets/css/sass/site-parts/footer.scss
+++ b/src/assets/css/sass/site-parts/footer.scss
@@ -6,15 +6,16 @@ footer {
     height: 80px;
     background-color:$mainYellow;
     bottom:0px;
+    right: 0px;
     text-align: center;
     // Remove unwanted margin
     p,ul{margin:0;}
     .social-networks {
         padding-top:15px;
-        
+
         i {
             i:first-child  {
-                margin-left:0px;    
+                margin-left:0px;
             }
             margin-left:7px;
             margin-right:7px;
