--- a/src/assets/css/sass/general/general-styling.scss
+++ b/src/assets/css/sass/general/general-styling.scss
@@ -28,13 +28,15 @@ body {
 
 
 }
+
 #site-container  {
     margin-left:30px;
+    margin-right:30px;
     padding-top:100px;
     position: relative;
     @media only screen and (max-width: 500px) {
-         
-        padding-top: 60px;  
+
+        padding-top: 60px;
     }
     .know-more {
         cursor:pointer;
@@ -54,7 +56,7 @@ header  {
 
     .logo-container {
         img {
-            
+
             height:auto;
             width:150px;
         }
