--- a/src/assets/css/sass/site-parts/footer.scss
+++ b/src/assets/css/sass/site-parts/footer.scss
@@ -9,7 +9,8 @@ footer {
     right: 0px;
     text-align: center;
     // Remove unwanted margin
-    p,ul{margin:0;}
+    p,ul {margin:0;
+         padding-left:0px;}
     .social-networks {
         padding-top:15px;
 
@@ -19,12 +20,12 @@ footer {
             }
             margin-left:7px;
             margin-right:7px;
-            font-size:25px;
+            font-size:16px;
         }
     }
 
     .footer-text  {
-        margin-left: 45px;
-        padding-top:15px;
+        padding-top:10px;
+
     }
 }
