--- a/src/assets/css/sass/site-parts/header.scss
+++ b/src/assets/css/sass/site-parts/header.scss
@@ -99,13 +99,14 @@ header {
                         }
 
                         a {
-                            transition:all 0.5s;
+                            //transition:all 0.5s;
 
                             // Kill hover and active underline
                             &:hover,
                             &:active {
                                 text-decoration:  none;
-                                font-size:17px;
+                                // percer
+                                border-bottom:solid 6px black;
                                 @media screen and (max-width: 880px) {
                                     font-size:38px;
                                 }
@@ -144,7 +145,7 @@ header {
                     display:block;
                     padding-bottom: 8px;
                     width: 35px;
-                    border-bottom: solid 3px black;
+                    border-bottom: solid 4px black;
                 }
             }
             #menu {
