--- a/src/assets/css/sass/general/font.scss
+++ b/src/assets/css/sass/general/font.scss
@@ -52,3 +52,23 @@
     margin-top: 10px;
     margin-bottom:0px;
 }
+
+%shrinking-text {
+    font-size:17px;
+    @media screen and (max-width: 1550px) {
+        font-size:16px;
+    }
+
+    @media screen and (max-width: 1350px) {
+        font-size:15px;
+    }
+
+    @media screen and (max-width: 1190px) {
+    
+    }
+
+    @media screen and (max-width: 620px) {
+
+
+    }
+}
