--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -3,11 +3,30 @@ body {
     .grid  {
         display: flex;
         flex-wrap: wrap;
-        max-width: 85%;
+        // max-width: 85%;
+        .cell  {
+            width: 22%;
+            margin-right:55px;
+            max-width: 350px;
+            min-width: 220px;
 
+            @media screen and (max-width: 1550px) {
+
+            }
+
+            @media screen and (max-width: 1190px) {
+                width: 33%;
+            }
+
+            @media screen and (max-width: 620px) {
+                width: 66%;
+                margin:0 auto;
+            }
+        }
         .grid-item {
+
+            width:100%;
             text-align: left;
-            width:330px;
             margin-right: 50px;
             margin-bottom:25px;
             position: relative;
@@ -19,10 +38,18 @@ body {
                 color:$mainBlack;
                 text-decoration:none;
             }
+            .thumbnail-grid-div {
 
+                background-color: #eee;
+                background-position: center;
+                background-size: cover;
+                padding-bottom: 56.25%;
+
+            }
+            // For Image
             .grid-thumbnail {
-                height:180px;
-                width:330px;
+                width: 100%;
+
                 &:hover {
                     opacity:0.75;
                 }
@@ -56,6 +83,7 @@ body {
 
             h4 {
                 @extend %thumbnail-title;
+                @extend %shrinking-text;
                 margin-top:10px;
                 margin-bottom:10px;
             }
