--- a/src/assets/css/sass/site-parts/home-page.scss
+++ b/src/assets/css/sass/site-parts/home-page.scss
@@ -3,11 +3,13 @@
 @import "../core/layout-rules.scss";
 
 .main-bloc {
-    height:100vh;
+    min-height:100vh;
+    width: 100%;
     position: relative;
+    display: block;
 
     .centered-container {
-        width:80%;
+        width:50%;
         @include center-content;
     }
 }
@@ -45,11 +47,6 @@
 // Bypass default video css
 body {
     #site-container {
-
-        @media (max-width:680px) {
-            margin-left:0px;
-
-        }
         video {
             &.main-page-video {
 
@@ -61,7 +58,7 @@ body {
 
 #model-homepage-container {
 
-    max-width:100%;
+    // max-width:100%;
     background-color: $transparentYellow;
     position: relative;
     z-index:1500;
@@ -127,9 +124,10 @@ body {
         margin-top:15px;
         text-align: center;
         position:relative;
-        text-align:left;
+        text-align:center;
+        width:100%;
         .container-item {
-
+            width:100%;
             display: inline-block;
         }
 
@@ -142,7 +140,7 @@ body {
             margin:0 auto;
             display: block;
             height:100px;
-            width:300px;
+            width: 25%;
             display: inline-block;
 
             border: solid 6px $mainBlack;
