--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -1,26 +1,43 @@
 @import "font.scss";
 body {
     .grid  {
+
         display: flex;
         flex-wrap: wrap;
+        margin-left: -1.5%;
+        margin-right: -1.5%;
         // max-width: 85%;
+        @media screen and (max-width: 1190px) {
+            margin-left: -2.5%;
+            margin-right: -2.5%;
+            // max-width: 85%;
+
+        }
+        @media screen and (max-width: 1190px) {
+            margin-left:0px;
+            margin-right:0px;
+        }
         .cell  {
-            width: 22%;
-            margin-right:55px;
-            max-width: 350px;
+
+
+            width: 30%;
+            margin-right:1.5%;
+            margin-left:1.5%;
+
+            //max-width: 350px;
             min-width: 220px;
 
-            @media screen and (max-width: 1550px) {
-
-            }
-
             @media screen and (max-width: 1190px) {
-                width: 33%;
+                margin-right:2.5%;
+                margin-left:2.5%;
+                width: 45%;
             }
 
-            @media screen and (max-width: 620px) {
-                width: 66%;
-                margin:0 auto;
+            @media screen and (max-width: 700px) {
+                width: 100%;
+                margin-right:0%;
+                margin-left:0%;
+
             }
         }
         .grid-item {
@@ -117,15 +134,46 @@ body {
 body {
 
     .custom-grid {
-        
+
+        .custom-grid-item {
+            width: 25%;
+        }
+
+        .custom-grid-item-small {
+
+
+            margin:0 auto;
+            display: block;
+            height:100px;
+            background-color:$mainYellow;
+            display: inline-block;
+            position: relative;
+            width: 10%;
+
+            h4 {
+                text-align:center;
+                margin-top: 0px;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+
+
+            }
+
+            @media screen and (max-width: 700px) {
+                
+
+            }
+
+        }
+
         .all-page-wrapper {.custom-grid-item.square-border {
+            margin-left:0px;
             @media screen and (max-width: 700px) {
 
 
             }
         }}
-        .custom-grid-item {
-
-        }
     }
 }
